--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 strings: [
                     "<span style=\"color:crimson;\">Influencer</span>",
                     "<span style=\"color:#00a8ff;\">CyberAnalyst</span>",
-                    "<span style=\"color:#00b894;\">Sportsman</span>",
+                    "<span style=\"color:#00b894;\">Sports</span>",
                 ],
                 typeSpeed: 100,
                 backSpeed: 60,
