--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         $(document).ready(function () {
             var typed = new Typed(".typing", {
                 strings: [
-                    "<span style=\"color:crimson;\">Influencer</span>",
+                    "<span style=\"color:crimson;\">Influencing</span>",
                     "<span style=\"color:#00a8ff;\">CyberAnalyst</span>",
                     "<span style=\"color:#00b894;\">Sports</span>",
                 ],
