--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         $(document).ready(function () {
             var typed = new Typed(".typing", {
                 strings: [
-                    "<span style=\"color:crimson;\">Influencing</span>",
-                    "<span style=\"color:#00a8ff;\">CyberAnalyst</span>",
+                    "<span style=\"color:crimson;\">Programming in Java</span>",
+                    "<span style=\"color:#00a8ff;\">Front-End Development</span>",
+                    "<span style=\"color:#00a8ff;\">Linux</span>",
                     "<span style=\"color:#00b894;\">Sports</span>",
                 ],
                 typeSpeed: 100,
@@ -85,9 +86,9 @@
                 <span class="hey">Hey</span>
                 <h3>I am <span>Siddhardh</span></h3>
                 <div class="text">And I am good in <span class="typing"></span></div>
-                <p> Hello World, I'm siddhardh.I'm a 20 year old. A highly motivated 3rd year computer science student at GMRIT,Rajam.I Analyzed deeply in network Scanning tools like Nmap and Metasploit.I am a cyber security enthusiast and having good experience searching for an oppurtunity where i can explore the new levels of learning where i can face real time situations to apply my skills and knowledge.
+                <p> Hello, I'm Siddhardh. I recently graduated with a degree in Computer Science and Engineering from GMR Institute of Technology, Rajam. My interests include SQL, front-end web development, and programming in Java. I have a strong background in network scanning tools such as Nmap and Metasploit, reflecting my enthusiasm for cybersecurity. I am seeking an opportunity where I can apply my skills and knowledge to real-time challenges, continually learning and growing in the field.
                 </p>
-                <a href="static/Siddhardh_Resume.pdf" download class="btn">Download Cv</a>
+                <a href="static/sid_Resume.pdf" download class="btn">Download Resume</a>
             </div>
         </section>
         <!-- Home Section End -->
@@ -109,14 +110,14 @@
 
                     <!-- Progress second child -->
                     <div class="progress">
-                        <h3>C++<span>70%</span> </h3>
+                        <h3>Java<span>90%</span> </h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <!-- Progress third child  -->
                     <!-- And so on so -->
                     <div class="progress">
-                        <h3>Python<span>70%</span> </h3>
+                        <h3>C<span>70%</span> </h3>
                         <div class="bar"><span></span></div>
                     </div>
                     
@@ -133,7 +134,7 @@
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
-                        <h3>Analyst<span>80%</span> </h3>
+                        <h3>Data Analyst<span>80%</span> </h3>
                         <div class="bar"><span></span></div>
                     </div>
                     <div class="progress">
@@ -157,8 +158,7 @@
                     <div class="content">
                         <i class="uil uil-arrow icon"></i>
                          <h3>DL Applications</h3>
-                         <p>Working on two more projects in addition to a deep learning project for image denoising that uses deep learning to remove noise from chest X-ray images.
-                         </p>
+                         <p>I have successfully completed a project on advanced deep learning initiative focused on image denoising. This sophisticated project utilized deep learning techniques to effectively remove noise from chest X-ray images, significantly enhancing their clarity and diagnostic utility.</p>
                         <a href="#home"><button>Learn More</button></a>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                     <div class="content">
                         <i class="uil uil-brackets-curly icon"></i>
                         <h3>Cyber Security</h3>
-                        <p>I've been actively researching,developing cybersecurity, with a emphasis on network security,cryptography,ethical hacking. I have a solid foundation in cybersecurity through my involvement in cybersecurity contests.
+                        <p>I've been actively researching and developing cybersecurity solutions, with a particular emphasis on network security, cryptography, and ethical hacking. My robust foundation in cybersecurity has been further solidified through my participation in various cybersecurity contests. Additionally, I have completed a sophisticated project involving adversarial attacks on machine learning models, demonstrating my ability to address and mitigate complex security threats.
                         </p>
                         <a href="#home"><button>Learn More</button></a>
                     </div>
@@ -174,8 +174,8 @@
                 <div class="box">
                     <div class="content">
                         <i class="uil uil-palette icon"></i>
-                        <h3>web development</h3>
-                        <p>I developed Portfolio by using HTML,CSS.With a focus on developing unique,memorable digital experiences,love for web development motivates to keep current with cutting-edge technology,industry practises.
+                        <h3>Web development</h3>
+                        <p>I meticulously crafted a portfolio utilizing HTML and CSS, emphasizing the creation of distinctive and memorable digital experiences. My fervor for web development compels me to remain at the forefront of technological advancements and industry best practices. Presently, I am augmenting my expertise by delving into React.js development.
                         </p>
                         <a href="#home"><button>Learn More</button></a>
                     </div>
@@ -221,7 +221,7 @@
                     </div>
                     <input type="text" placeholder="subject">
                     <textarea name="" id="" cols="30" rows="10" placeholder="message"></textarea>
-                    <button class="btn"> send message </button>
+                    <button class="btn"> Send Message </button>
                 </form>
     
                 <iframe class="map"
